# redesigned-goggles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
docs/: Editor_System.md  UI_Framework.md  tech_tree_json_implementation.md
examples/: game_data_validation_tool.cpp  simple_integration_test.cpp  tech_tree_console_demo.cpp  tech_tree_crafting_integration_test.cpp  tech_tree_example.cpp  tech_tree_json_test.cpp  tech_tree_layout_demo.cpp  tech_tree_ui_test.cpp
include/: Card.h  Constants.h  Controller.h  CraftingSystem.h  DataManager.h  Event.h  Game.h  GameConstants.h  GameInputHandler.h  IGameView.h  ImGuiManager.h  Inventory.h  SDLManager.h  SaveManager.h  UIConstants.h  View.h
include/Core/: BaseBuildingController.h  BaseManager.h  Building.h  Card.h  Controller.h  Event.h  Game.h  IGameView.h  Inventory.h  SignalHandler.h  SimpleGameController.h  View.h
include/Interface/: GameInputHandler.h
include/Interface/editor/: ConsoleEditor.h  EditorInterfaces.h  EditorServices.h  GameData.h  GameEditor.h
include/Interface/ui/: CardDisplayData.h  TechNode.h  TechTreeUI.h  UICard.h  UIComponent.h  UIContainer.h  UICraftingPanel.h  UIInventoryContainer.h  UIManager.h  UITooltip.h
include/Systems/: CraftingSystem.h  DataManager.h  GameDataValidator.h  ImGuiManager.h  SaveManager.h  TechTreeSystem.h
include/editor/: ConsoleEditor.h  EditorCommands.h  EditorController.h  EditorInterfaces.h  EditorServices.h  GameData.h  GameEditor.h
include/game/: GameInterfaces.h  GameServices.h  SimpleGameController.h
include/ui/: UIButton.h  UICard.h  UIComponent.h  UIContainer.h  UICraftingPanel.h  UITooltip.h
script/: run_tests.md  run_tests.sh  test_editor_demo.sh  test_editor_fixes.sh  testing_progress_bars.sh  testing_responsiveness.sh  testing_safe_exit.sh  testing_view_refactor.sh
src/: Controller.cpp  CraftingSystem.cpp  DataManager.cpp  Game.cpp  GameInputHandler.cpp  ImGuiManager.cpp  Inventory.cpp  SDLManager.cpp  SaveManager.cpp  View.cpp  main.cpp
src/Core/: BaseBuildingController.cpp  BaseManager.cpp  Building.cpp  Card.cpp  Controller.cpp  Game.cpp  Inventory.cpp  SignalHandler.cpp  View.cpp
src/Interface/: GameInputHandler.cpp
src/Interface/editor/: ConsoleEditor.cpp  GameData.cpp  GameEditor.cpp
src/Interface/ui/: TechTreeUI.cpp  UIButton.cpp  UICard.cpp  UIComponent.cpp  UIContainer.cpp  UICraftingPanel.cpp  UIInventoryContainer.cpp  UIManager.cpp  UITooltip.cpp
src/Systems/: CraftingSystem.cpp  DataManager.cpp  GameDataValidator.cpp  ImGuiManager.cpp  SaveManager.cpp  TechTreeSystem.cpp
src/editor/: ConsoleEditor.cpp  GameData.cpp  GameEditor.cpp
src/ui/: UIButton.cpp  UICard.cpp  UIComponent.cpp  UIContainer.cpp  UICraftingPanel.cpp  UIManager.cpp  UITooltip.cpp
testing/: testing_card_detection.cpp  testing_drag_functionality.cpp  testing_progress_direct.cpp  testing_view_refactor.cpp
tests/: test_base_building.cpp  test_card.cpp  test_crafting_system.cpp  test_data_manager.cpp  test_inventory.cpp  test_tech_tree.cpp  test_ui_container.cpp  test_ui_integration.cpp  test_ui_manager.cpp  test_ui_virtualization.cpp
